--- a/css/styles.css
+++ b/css/styles.css
@@ -655,8 +655,8 @@ footer {
     position: fixed;
     width: 100%;
     height: 100%;
-    left: 0px;
-    top: 0px;
+    left: 0%;
+    top: 0%;
     z-index: 2;
     transition:  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -674,7 +674,8 @@ footer {
     width: 500px;
     height: 600px;
     left: 50%;
-    top: 221px; 
+    /* top: 221px;  */
+    top: 3%;
     transform: translateX(-50%);
     z-index: 3;
    
